Raise time limits for AudioSyncReader::Read() for test on Fuchsia.

Fuchsia, running on the test bots, was sometimes taking too long to
return data to AudioSyncReader (observed 21ms, max 20ms), which
lead to test flakes.


Bug: 838367
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: If2e25357acd70eaa28c6e618e696cc39ea9ba372
Reviewed-on: https://chromium-review.googlesource.com/1036196
Commit-Queue: Kevin Marshall <kmarshall@chromium.org>
Reviewed-by: Max Morin <maxmorin@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555128}
Former-commit-id: e5fd51b099f9b18621929d9c4f528fd374a53530