media/audio/audio_sync_reader.h
@@ -57,6 +57,10 @@ class MEDIA_EXPORT AudioSyncReader : public AudioOutputController::SyncReader {
     return shared_memory_.get();
   }
 
+  void set_max_wait_timeout_for_test(base::TimeDelta time) {
+    maximum_wait_time_ = time;
+  }
+
   // AudioOutputController::SyncReader implementations.
   void RequestMoreData(base::TimeDelta delay,
                        base::TimeTicks delay_timestamp,
@@ -97,7 +101,7 @@ class MEDIA_EXPORT AudioSyncReader : public AudioOutputController::SyncReader {
 
   // The maximum amount of time to wait for data from the renderer.  Calculated
   // from the parameters given at construction.
-  const base::TimeDelta maximum_wait_time_;
+  base::TimeDelta maximum_wait_time_;
 
   // The index of the audio buffer we're expecting to be sent from the renderer;
   // used to block with timeout for audio data.
